# neuredge-python-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: readme_examples.py  try.py
neuredge_sdk/: __init__.py  client.py  types.py
neuredge_sdk/capabilities/: base.py  image.py  text.py  vector.py
neuredge_sdk/openai/: base.py  completions.py  embeddings.py  index.py
tests/: config.py  notes.md  run_tests.py  utils.py
tests/integration/: __init__.py  completion.py  embedding.py  image.py  text.py  vector.py
