[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuredge-sdk"
version = "1.0.0-beta.3"
description = "Official Python SDK for the Neuredge AI Platform"
readme = "README.md"
authors = [
    { name = "Neuredge", email = "support@neuredge.dev" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/neuredge/python-sdk"
Documentation = "https://docs.neuredge.dev"
